modules/gdscript/tests/scripts/parser/errors/bad_f_string_4.gd
func test():
    print(f"empty slot {}")
